# skill-homeassistant

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  skill.json
.github/workflows/: license-tests.yml  unit-tests.yml
.github/workflows/scripts/: update_skill_json.py
skill_homeassistant/: __init__.py
skill_homeassistant/ha_client/: __init__.py  constants.py
skill_homeassistant/ha_client/logic/: connector.py  device.py  utils.py
skill_homeassistant/locale/en-us/: skill.json
skill_homeassistant/locale/en-us/dialog/: acknowledge.dialog  assist.error.dialog  lights.current.color.dialog  lights.status.not.available.dialog  no.parsed.device.dialog  vacuum.action.not.found.dialog
skill_homeassistant/locale/pl-pl/: colors.json  skill.json
skill_homeassistant/locale/pl-pl/dialog/: acknowledge.dialog  assist.dialog  assist.error.dialog  assist.not.understood.dialog  device.not.found.dialog  device.status.dialog  device.turned.off.dialog  device.turned.on.dialog  disable.dialog  enable.dialog  lights.current.brightness.dialog  lights.current.color.dialog  lights.status.not.available.dialog  no.parsed.device.dialog  vacuum.action.not.found.dialog
skill_homeassistant/locale/pl-pl/intents/: assist.intent  disable.intent  enable.intent  get.all.devices.intent  lights.decrease.brightness.intent  lights.get.brightness.intent  lights.get.color.intent  lights.increase.brightness.intent  lights.set.brightness.intent  lights.set.color.intent  sensor.intent  stop.intent  turn.off.intent  turn.on.intent
test/: test_client.py  test_skill.py
test/e2e/: test_e2e.py
tests/: unit-test-results.xml
